// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QuillInline should get style 1`] = `
Object {
  "color": "blue",
  "fontStyle": "italic",
  "textDecorationLine": "underline",
}
`;

exports[`QuillInline should render 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  disabled={false}
  ellipsizeMode="tail"
  onPress={[Function]}
  style={
    Object {
      "color": "blue",
      "textDecorationLine": "underline",
    }
  }
/>
`;

exports[`QuillInline should render with an onPress function 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  disabled={false}
  ellipsizeMode="tail"
  onPress={[Function]}
  style={
    Object {
      "color": "blue",
      "textDecorationLine": "underline",
    }
  }
/>
`;

exports[`QuillInline should render without link 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  disabled={false}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "grey",
    }
  }
/>
`;
